--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "element-plus": "^2.10.1",
     "flatpickr": "^4.6.13",
     "moment": "^2.29.4",
+    "pinia": "^3.0.3",
     "vue": "^3.2.20",
     "vue-flatpickr-component": "^11.0.3",
     "vue-router": "^4.2.5"
