--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "format:check": "prettier --check \"src/**/*.{js,vue,json}\""
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -27,6 +29,8 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/compiler-sfc": "^3.2.20",
     "postcss": "^8.4.32",
+    "prettier": "^3.5.3",
+    "prettier-plugin-vue": "^1.1.6",
     "tailwindcss": "^4.0.0",
     "vite": "^6.0.3"
   }
